Right-aligning the logo + fixing block display of text divs

--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,25 @@ body {
   width: 100%;
   margin: 0 auto;
 }
+
+/* --- Naglowek --- */
+
+.naglowekPrzesuwany {
+width: 100%;
+height: 100px;
+/*transition: top 0.2s ease-in-out;*/
+/* position: fixed; */
+background-color: #446600;
+}
+
+.gornaNawigacja {
+  max-width: 960px;
+  height: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #4d9900;
+}
+
 nav {
   width: 100%;
   margin: 0px 0;
@@ -40,20 +59,81 @@ nav ul li a:active {
   background: #408000;
 }
 
+/* ---------- obrazki ---------- */
+
+/* .lewaIkonka {
+  width: 30px;
+  height: 30px;
+  padding-top: 10px;
+  /* float: left; */
+
+  .ikonkaFB {
+    width: 30px;
+    height: 30px;
+    padding-top: 10px;
+    float: right;
+  }
 
 
-.naglowekPrzesuwany {
-width: 100%;
-height: 100px;
-/* transition: top 0.2s ease-in-out; */
-position: fixed;
-background-color: #446600;
-}
 
-.gornaNawigacja {
-  max-width: 960px; /* rozwaz :auto */
-  height: 50px;
+/* -- Sekcje --- */
+.sztucznaSekcja1 {
+  max-width: 960px;
   margin-left: auto;
   margin-right: auto;
-  background-color: #55552b;
+  /* margin-top: 50px; */
+  height: 600px;
+  background-color: #a3a375;
 }
+
+.obrazekPlusTekst {
+  float: left;
+  padding-top: 20px;
+  width: 30%;
+  margin-left: 1%;
+  margin-right: 1%;
+}
+
+.obrazek {
+  width: 280px;
+  height:auto;
+  margin: 5, 5, 5, 5;
+}
+
+.opis {
+  width: 280px;
+  height: auto;
+  marging: 5,5,5,5;
+}
+
+.tytul {
+  font-size: 1.2em;
+  font-weight: bold;
+  font: Georgia;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.tekstZasadniczy {
+  font-size: 1em;
+  font-family: sans-serif;
+  padding-left: 10px;
+  padding-right: 10px;
+  word-wrap: break-word;
+}
+
+.sztucznaSekcja2 {
+  max-width: 960px;
+  margin-left: auto;
+  margin-right: auto;
+  height: 300px;
+  background-color: #8a8a5c;
+}
+
+.sztucznaSekcja3 {
+    max-width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+    height: 300px;
+    background-color: #4d4d33;
+  }
